--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
+    "jquery": "^3.5.1",
     "notistack": "^0.9.17",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
