--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
+    "bootstrap-switch-button-react": "^1.2.0",
     "jquery": "^3.5.1",
     "notistack": "^0.9.17",
     "react": "^16.13.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-switch": "^5.0.1",
     "simple-react-validator": "^1.5.0"
   },
   "scripts": {
