--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
     "bootstrap-switch-button-react": "^1.2.0",
+    "connected-react-router": "^6.8.0",
+    "history": "^4.10.1",
     "jquery": "^3.5.1",
     "notistack": "^0.9.17",
     "react": "^16.13.1",
@@ -19,10 +21,13 @@
     "react-dom": "^16.13.1",
     "react-loader-spinner": "^3.1.14",
     "react-pro-sidebar": "^0.4.3",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "4.4.0-beta.8",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-switch": "^5.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.5.0"
   },
   "scripts": {
