--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.5.1",
     "bootstrap-switch-button-react": "^1.2.0",
-    "connected-react-router": "^6.8.0",
+    "connected-react-router": "^4.5.0",
     "history": "^4.10.1",
     "jquery": "^3.5.1",
-    "notistack": "^0.9.17",
-    "react": "^16.13.1",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.9.0",
     "react-loader-spinner": "^3.1.14",
     "react-pro-sidebar": "^0.4.3",
-    "react-redux": "^7.2.1",
+    "react-redux": "^5.1.1",
+    "react-redux-toastr": "^7.5.1",
+    "react-router": "4.4.0-beta.8",
     "react-router-dom": "4.4.0-beta.8",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-switch": "^5.0.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "redux": "4.0.4",
+    "redux-thunk": "2.3.0",
+    "sanitize.css": "7.0.3",
     "simple-react-validator": "^1.5.0"
   },
   "scripts": {
