--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.9.0",
-    "react-loader-spinner": "^3.1.14",
     "react-pro-sidebar": "^0.4.3",
     "react-redux": "^5.1.1",
     "react-redux-toastr": "^7.5.1",
@@ -26,6 +25,7 @@
     "react-router-dom": "4.4.0-beta.8",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-spinners": "^0.9.0",
     "react-switch": "^5.0.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
