--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "4.4.0-beta.8",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-sortable-hoc": "^1.11.0",
     "react-spinners": "^0.9.0",
     "react-switch": "^5.0.1",
     "redux": "4.0.4",
