--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^7.19.1",
     "history": "^4.10.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.3.0",
@@ -34,6 +35,7 @@
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "simple-react-validator": "^1.5.0",
+    "underscore": "^1.11.0",
     "uuidv4": "^6.2.3"
   },
   "scripts": {
