Worked on trello's bugs fixing

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "simple-react-validator": "^1.5.0",
+    "tinyurl": "^1.1.7",
     "underscore": "^1.11.0",
     "uuidv4": "^6.2.3"
   },
