--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "axios-request-handler": "^1.0.4",
     "bootstrap": "^4.5.1",
     "bootstrap-switch-button-react": "^1.2.0",
     "connected-react-router": "^4.5.0",
